fix bug #29723 (file_get_contents() fails with the file:// wrapper under Win32)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@167708 c90b9560-bf6c-de11-be94-00142212c4b1